$mol_expander: fixed align

--- a/expander/expander.css
+++ b/expander/expander.css
@@ -10,5 +10,4 @@
 
 [mol_expander_trigger] {
 	flex: auto;
-	align-items: baseline;
 }
